fixed alignment of follow us on instagram button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,8 +268,10 @@ main {
   padding: 10px 30px;
   border: none;
   border-radius: 5px;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
 }
 
@@ -385,6 +387,10 @@ main {
   .instagram-handle {
     display: block;
     text-align: center;
+  }
+
+  .follow {
+    margin-top: 3%;
   }
 }
 
